# commit-audition

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  cliff.toml  dist-workspace.toml
.claude/: settings.local.json
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.zh-CN.md  Usage-en.md  Usage.md  config-en.md  config.md  keybindings-en.md  keybindings.md
docs/note/: Architecture-CLI Layer.md  Architecture-Integration Layer.md  Architecture-Logic Layer.md  Architecture-UI Layer.md  Configuration.md  architecture.md  dependencies.md
docs/note/modules/: Commit Message 校验策略.md  Integration with AI.md
locales/: en.yml  zh.yml
man/: commit-audition.1
man/zh_CN/: commit-audition.1
scripts/: ci-check.sh  pre-push.sh
src/: cli.rs  lib.rs  logic.rs  main.rs  prelude.rs  ui.rs
src/cli/: args.rs
src/logic/: ai.rs  builder.rs  config.rs  hook.rs  model.rs  rules.rs
src/logic/ai/: claude.rs  diff.rs  openai_compat.rs  prompt.rs  provider.rs
src/ui/: editor.rs  prompt.rs  render.rs  vim.rs
src/ui/vim/: app.rs  event.rs  view.rs
templates/: config.en.toml  config.zh.toml
tests/: i18n_test.rs  integration_test.rs
