[package]
name = "commit-audition"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/Orangex-position0/commit-audition.git"

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
dialoguer = "0.12.0"
colored = "2.2.0"
unicode-width = "0.2.0"
dirs = "5.0.1"
toml = "0.9.0"
serde = { version = "1.0.2", features = ["derive"] }
tempfile = "3.23.0"
ratatui = "0.29.0"
crossterm = "0.28.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
