[package]
name = "commit-audition"
version = "0.4.0"
edition = "2024"
rust-version = "1.88.0"
description = "Interactive Git Commit Message generator and validator following Conventional Commits"
repository = "https://github.com/Orangex-position0/commit-audition.git"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
colored = "2.2.0"
unicode-width = "0.2.0"
dirs = "5.0.1"
toml = "1.1.2"
serde = { version = "1.0.2", features = ["derive"] }
tempfile = "3.23.0"
ratatui = "0.29.0"
crossterm = "0.28.0"
rust-i18n = "3"
inquire = { version = "0.9", features = ["editor"] }
reqwest = { version = "0.12.0", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
async-trait = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
